--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,15 @@ version = versionNumber+versionMarker
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs 'lib'
+    }
 }
 
 dependencies {
     compileOnly 'org.jetbrains:annotations:26.0.1'
+    implementation 'it.italiandudes:idl:1.0.9'
+    implementation 'org.json:json:20240303'
 }
 
 shadowJar {
