--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,9 @@ repositories {
 
 dependencies {
     compileOnly 'org.jetbrains:annotations:26.0.1'
-    implementation 'it.italiandudes:idl:1.0.9'
+    implementation 'commons-io:commons-io:2.18.0'
     implementation 'org.json:json:20240303'
+    implementation 'it.italiandudes:idl:1.0.9'
 }
 
 shadowJar {
@@ -43,11 +44,16 @@ tasks.register('buildJar') {
     group = "Build"
     description = "Build and assemble HellRandomizer"
 }
-
-tasks.register('runClient', Exec) {
+tasks.register('runNogui', Exec) {
     dependsOn shadowJar
     group = "Execution"
     description = "Build, assemble and run HellRandomizer"
     standardInput = System.in
+    commandLine "java", "-jar", jar.archiveFile.get(), "-nogui"
+}
+tasks.register('runClient', Exec) {
+    dependsOn shadowJar
+    group = "Execution"
+    description = "Build, assemble and run HellRandomizer"
     commandLine "java", "-jar", jar.archiveFile.get()
 }
